# EROS

./: .gitignore  NOTES.md  README.md  pyproject.toml
.eros/: config.toml
docs/: ARCHITECTURE.md  IDEA_MAP.md  VISION.md
docs/notes/: 2026-07-07-session-1.md  2026-07-07-session-2.md
src/eros/: __init__.py  cli.py  config.py  ideas.py  models.py  store.py
src/eros/pipeline/: decompose.py  dispatch.py  plan.py  review.py
src/eros/providers/: __init__.py  anthropic_api.py  base.py  claude_code.py  ollama.py  openai_compat.py
workspace/ideas/: idea_map.yaml
workspace/projects/rate-limiter-zoo/: architecture.md  charter.md  project.yaml
workspace/projects/rate-limiter-zoo/runs/: RUN-001.md  RUN-002.md  RUN-003.md  RUN-004.md  RUN-005.md  RUN-006.md  RUN-007.md  RUN-008.md
workspace/projects/rate-limiter-zoo/tasks/: TASK-001-scaffold-ratezoo-package-with-core-interface-and.md  TASK-002-implement-token-bucket-limiter-with-unit-tests.md  TASK-003-build-property-test-suite-parametrized-over-the-.md  TASK-004-implement-leaky-bucket-and-fixed-window-limiters.md  TASK-005-implement-sliding-window-log-and-sliding-window-.md  TASK-006-add-multi-threaded-safety-test.md  TASK-007-build-benchmark-harness-with-json-output.md  TASK-008-build-markdown-report-generator.md
