[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eros"
version = "0.1.0"
description = "Engineer's Research Operating System — the factory that builds the next 20 projects"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ajey Agarwal" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]

[project.scripts]
eros = "eros.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
